--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,13 @@ services:
     volumes:
       - docker_cache:/var/lib/docker
 
+    healthcheck:
+      test: ["CMD-SHELL", "apk add --no-cache curl >/dev/null 2>&1 && curl -fs http://localhost:2375/_ping || exit 1"]
+      interval: 10s
+      timeout: 5s
+      retries: 10
+    restart: unless-stopped
+    
   jenkins:
     build:
       context: ./jenkins
@@ -23,10 +30,14 @@ services:
     environment:
       - DOCKER_HOST=tcp://dind:2375
       - JAVA_OPTS=-Djenkins.install.runSetupWizard=true
-    depends_on: [dind]
+    depends_on:
+      dind:
+        condition: service_healthy
     networks: [jenkins]
     volumes:
       - jenkins_home:/var/jenkins_home
+      - /usr/bin/docker:/usr/bin/docker:ro     
+    restart: unless-stopped
 
 networks:
   jenkins:
