--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ version: "3.9"
 services:
   dind:
     image: docker:24-dind
+    container_name: dind 
     privileged: true
     command: ["--host=tcp://0.0.0.0:2375", "--storage-driver=overlay2"]
     environment:
